--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "VSKut/WebMoney-Merchant",
+  "name": "vskut/webmoney-merchant",
   "description": "WebMoney Merchant - PHP Library",
   "keywords": ["webmoney", "web money", "mechant", "wmtransfer", "transfer"],
   "license": "MIT",
