--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
       "email": "me@vskut.ru"
     }
   ],
+  "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
       "VSKut\\WebMoney_Merchant\\": ""
