--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     }
   ],
   "minimum-stability": "dev",
+  "preferred-install": "dev",
   "autoload": {
     "psr-4": {
       "VSKut\\WebMoney_Merchant\\": ""
